# Coach.ai

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  prompts.py  pyproject.toml  pytest.ini  run_tests.py  strava_client.py  strava_server.py  workout_db_server.py
coach/: cli.py  scheduling.py
docs/: development.md  index.md  installation.md  roadmap.md  skills.md  workflow.md
scripts/: setup_auth.py
strava/: explore_segments.py  export_route_gpx.py  get_activity_laps.py  get_athlete_profile.py  get_athlete_stats.py  get_athlete_zones.py  get_recent_activities.py  get_route.py  strava_client.py  strava_server.py
tests/: conftest.py  functional_helpers.py  test_assemble.py  test_cli.py  test_functional_adjust_workout.py  test_functional_body_checkin.py  test_functional_evaluate_training.py  test_functional_generate_daily_workout.py  test_functional_readiness_check.py  test_functional_research_goal_plan.py  test_functional_setup_coach_personality.py  test_harness_claude.py  test_harness_codex.py  test_harness_parity.py  test_main.py  test_registry.py  test_scheduling.py  test_schema.py  test_sources_garmin.py  test_sources_google_calendar.py  test_sources_outlook_calendar.py  test_sources_strava.py  test_store.py  test_strava_client.py  test_strava_server.py  test_tools.py
tools/: baseline_fitness.py  export_route_tcx.py  format_workout_file.py  get_activity_details.py  get_activity_streams.py  get_athlete_profile.py  get_athlete_stats.py  get_athlete_zones.py  get_recent_activities.py  get_route.py  user_profile_schema.py  workout_db_tools.py
(+40 files in other folders)
