[project]
name = "coach-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.12.3",
    "llama-index>=0.14.2",
    "llama-index-llms-azure-openai>=0.4.1",
    "llama-index-tools-mcp>=0.4.1",
    "llama-index-tools-duckduckgo>=0.4.0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.0",
    "pytest>=8.4.2",
]
