[project]
name = "coach-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.3",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "tomlkit>=0.15.0",
]

[project.scripts]
coach = "coach.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "mkdocs-material>=9.7.6",
]

[tool.hatch.build.targets.wheel]
packages = ["coach"]
